--- a/src/main/resources/resources/fxml/MoviesSettings.fxml
+++ b/src/main/resources/resources/fxml/MoviesSettings.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXRadioButton?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
@@ -44,10 +43,6 @@
         <Insets left="105.0" />
       </GridPane.margin>
     </Label>
-      <JFXButton fx:id="buttonOKMoviesSettings" alignment="CENTER" buttonType="RAISED" contentDisplay="CENTER" onAction="#saveSettingsMovies" prefHeight="50.0" prefWidth="130.0" style="-fx-text-fill:WHITE;-fx-background-color:#5264AE;-fx-font-size:14px;" text="OK" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="5">
-        <GridPane.margin>
-          <Insets left="230.0" />
-        </GridPane.margin></JFXButton>
         <GridPane fx:id="gridFilesName" maxHeight="247.0" maxWidth="436.0" minHeight="100.0" minWidth="400.0" prefHeight="157.0" prefWidth="436.0" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="2">
           <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -59,19 +54,19 @@
             <RowConstraints maxHeight="40.0" minHeight="40.0" prefHeight="40.0" vgrow="SOMETIMES" />
           </rowConstraints>
           <children>
-            <JFXRadioButton fx:id="radioButtonFiles5" styleClass="custom-jfx-radio-button" text="Name Of Your Choice" userData="5" GridPane.rowIndex="2">
+            <JFXRadioButton fx:id="radioButtonFiles5" onAction="#saveSettingsMovies" styleClass="custom-jfx-radio-button" text="Name Of Your Choice" userData="5" GridPane.rowIndex="2">
               <toggleGroup>
                 <ToggleGroup fx:id="groupFilesName" />
               </toggleGroup></JFXRadioButton>
-              <JFXRadioButton fx:id="radioButtonFiles6" styleClass="custom-jfx-radio-button" text="Name_Of_Your_Choice" toggleGroup="$groupFilesName" userData="6" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-              <JFXRadioButton fx:id="radioButtonFiles3" styleClass="custom-jfx-radio-button" text="Name of your choice" toggleGroup="$groupFilesName" userData="3" GridPane.rowIndex="1">
+              <JFXRadioButton fx:id="radioButtonFiles6" onAction="#saveSettingsMovies" styleClass="custom-jfx-radio-button" text="Name_Of_Your_Choice" toggleGroup="$groupFilesName" userData="6" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+              <JFXRadioButton fx:id="radioButtonFiles3" onAction="#saveSettingsMovies" styleClass="custom-jfx-radio-button" text="Name of your choice" toggleGroup="$groupFilesName" userData="3" GridPane.rowIndex="1">
                 <GridPane.margin>
                   <Insets />
                 </GridPane.margin>
               </JFXRadioButton>
-              <JFXRadioButton fx:id="radioButtonFiles2" styleClass="custom-jfx-radio-button" text="name_of_your_choice" toggleGroup="$groupFilesName" userData="2" GridPane.columnIndex="1" />
-              <JFXRadioButton fx:id="radioButtonFiles1" styleClass="custom-jfx-radio-button" text="name of your choice" toggleGroup="$groupFilesName" userData="1" />
-              <JFXRadioButton fx:id="radioButtonFiles4" styleClass="custom-jfx-radio-button" text="Name_of_your_choice" toggleGroup="$groupFilesName" userData="4" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+              <JFXRadioButton fx:id="radioButtonFiles2" onAction="#saveSettingsMovies" styleClass="custom-jfx-radio-button" text="name_of_your_choice" toggleGroup="$groupFilesName" userData="2" GridPane.columnIndex="1" />
+              <JFXRadioButton fx:id="radioButtonFiles1" onAction="#saveSettingsMovies" styleClass="custom-jfx-radio-button" text="name of your choice" toggleGroup="$groupFilesName" userData="1" />
+              <JFXRadioButton fx:id="radioButtonFiles4" onAction="#saveSettingsMovies" styleClass="custom-jfx-radio-button" text="Name_of_your_choice" toggleGroup="$groupFilesName" userData="4" GridPane.columnIndex="1" GridPane.rowIndex="1" />
             </children>
             <GridPane.margin>
               <Insets left="90.0" />
