--- a/src/main/resources/resources/fxml/MusicsSettings.fxml
+++ b/src/main/resources/resources/fxml/MusicsSettings.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXToggleButton?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
@@ -32,10 +31,6 @@
         <Insets />
       </GridPane.margin>
     </Label>
-      <JFXButton fx:id="buttonOKMusicsSettings" alignment="CENTER" buttonType="RAISED" contentDisplay="CENTER" onAction="#saveSettingsMusics" prefHeight="50.0" prefWidth="130.0" style="-fx-text-fill:WHITE;-fx-background-color:#5264AE;-fx-font-size:14px;" text="OK" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="5">
-        <GridPane.margin>
-          <Insets left="230.0" />
-        </GridPane.margin></JFXButton>
         <GridPane maxHeight="247.0" maxWidth="400.0" minHeight="100.0" minWidth="400.0" prefHeight="159.0" prefWidth="400.0" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="2">
           <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -50,7 +45,7 @@
             <Insets left="90.0" />
           </GridPane.margin>
           <children>
-            <JFXToggleButton fx:id="removeTrackNumberMusicsSettings" prefHeight="56.0" prefWidth="208.0" styleClass="custom-jfx-toggle-button" text="Remove Track Number" />
+            <JFXToggleButton fx:id="removeTrackNumberMusicsSettings" onAction="#saveSettingsMusics" prefHeight="56.0" prefWidth="208.0" styleClass="custom-jfx-toggle-button" text="Remove Track Number" />
           </children>
         </GridPane>
       </children>
