--- a/src/main/resources/resources/fxml/SeriesSettings.fxml
+++ b/src/main/resources/resources/fxml/SeriesSettings.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXRadioButton?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
@@ -55,10 +54,6 @@
         <Insets left="105.0" />
       </padding>
     </Label>
-      <JFXButton fx:id="buttonOKSeriesSettings" alignment="CENTER" buttonType="RAISED" contentDisplay="CENTER" onAction="#saveSettingsSeries" prefHeight="50.0" prefWidth="130.0" style="-fx-text-fill:WHITE;-fx-background-color:#5264AE;-fx-font-size:14px;" text="OK" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="5">
-        <GridPane.margin>
-          <Insets left="230.0" />
-        </GridPane.margin></JFXButton>
         <GridPane alignment="TOP_CENTER" maxHeight="318.0" maxWidth="300.0" minHeight="250.0" minWidth="300.0" prefHeight="318.0" prefWidth="300.0" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="4">
           <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -73,21 +68,21 @@
             <RowConstraints maxHeight="40.0" minHeight="40.0" prefHeight="40.0" vgrow="SOMETIMES" />
           </rowConstraints>
           <children>
-            <JFXRadioButton fx:id="radioButtonSeriesNumberName12" styleClass="custom-jfx-radio-button" text="00X00" userData="12" GridPane.columnIndex="1" GridPane.rowIndex="5">
+            <JFXRadioButton fx:id="radioButtonSeriesNumberName12" onAction="#saveSettingsSeries" styleClass="custom-jfx-radio-button" text="00X00" userData="12" GridPane.columnIndex="1" GridPane.rowIndex="5">
               <toggleGroup>
                 <ToggleGroup fx:id="groupSeasonEpisodeName" />
               </toggleGroup></JFXRadioButton>
-              <JFXRadioButton fx:id="radioButtonSeriesNumberName11" styleClass="custom-jfx-radio-button" text="00x00" toggleGroup="$groupSeasonEpisodeName" userData="11" GridPane.rowIndex="5" />
-              <JFXRadioButton fx:id="radioButtonSeriesNumberName10" styleClass="custom-jfx-radio-button" text="S00E00" toggleGroup="$groupSeasonEpisodeName" userData="10" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-              <JFXRadioButton fx:id="radioButtonSeriesNumberName9" styleClass="custom-jfx-radio-button" text="s00e00" toggleGroup="$groupSeasonEpisodeName" userData="9" GridPane.rowIndex="4" />
-              <JFXRadioButton fx:id="radioButtonSeriesNumberName8" styleClass="custom-jfx-radio-button" text="S00XE00" toggleGroup="$groupSeasonEpisodeName" userData="8" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-              <JFXRadioButton fx:id="radioButtonSeriesNumberName7" styleClass="custom-jfx-radio-button" text="s00xe00" toggleGroup="$groupSeasonEpisodeName" userData="7" GridPane.rowIndex="3" />
-              <JFXRadioButton fx:id="radioButtonSeriesNumberName6" styleClass="custom-jfx-radio-button" text="S00_E00" toggleGroup="$groupSeasonEpisodeName" userData="6" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-              <JFXRadioButton fx:id="radioButtonSeriesNumberName5" styleClass="custom-jfx-radio-button" text="s00-e00" toggleGroup="$groupSeasonEpisodeName" userData="5" GridPane.rowIndex="2" />
-              <JFXRadioButton fx:id="radioButtonSeriesNumberName4" styleClass="custom-jfx-radio-button" text="S00-E00" toggleGroup="$groupSeasonEpisodeName" userData="4" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-              <JFXRadioButton fx:id="radioButtonSeriesNumberName3" styleClass="custom-jfx-radio-button" text="s00_e00" toggleGroup="$groupSeasonEpisodeName" userData="3" GridPane.rowIndex="1" />
-              <JFXRadioButton fx:id="radioButtonSeriesNumberName2" styleClass="custom-jfx-radio-button" text="S00 E00" toggleGroup="$groupSeasonEpisodeName" userData="2" GridPane.columnIndex="1" />
-              <JFXRadioButton fx:id="radioButtonSeriesNumberName1" styleClass="custom-jfx-radio-button" text="s00 e00" toggleGroup="$groupSeasonEpisodeName" userData="1" />
+              <JFXRadioButton fx:id="radioButtonSeriesNumberName11" onAction="#saveSettingsSeries" styleClass="custom-jfx-radio-button" text="00x00" toggleGroup="$groupSeasonEpisodeName" userData="11" GridPane.rowIndex="5" />
+              <JFXRadioButton fx:id="radioButtonSeriesNumberName10" onAction="#saveSettingsSeries" styleClass="custom-jfx-radio-button" text="S00E00" toggleGroup="$groupSeasonEpisodeName" userData="10" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+              <JFXRadioButton fx:id="radioButtonSeriesNumberName9" onAction="#saveSettingsSeries" styleClass="custom-jfx-radio-button" text="s00e00" toggleGroup="$groupSeasonEpisodeName" userData="9" GridPane.rowIndex="4" />
+              <JFXRadioButton fx:id="radioButtonSeriesNumberName8" onAction="#saveSettingsSeries" styleClass="custom-jfx-radio-button" text="S00XE00" toggleGroup="$groupSeasonEpisodeName" userData="8" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+              <JFXRadioButton fx:id="radioButtonSeriesNumberName7" onAction="#saveSettingsSeries" styleClass="custom-jfx-radio-button" text="s00xe00" toggleGroup="$groupSeasonEpisodeName" userData="7" GridPane.rowIndex="3" />
+              <JFXRadioButton fx:id="radioButtonSeriesNumberName6" onAction="#saveSettingsSeries" styleClass="custom-jfx-radio-button" text="S00_E00" toggleGroup="$groupSeasonEpisodeName" userData="6" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+              <JFXRadioButton fx:id="radioButtonSeriesNumberName5" onAction="#saveSettingsSeries" styleClass="custom-jfx-radio-button" text="s00-e00" toggleGroup="$groupSeasonEpisodeName" userData="5" GridPane.rowIndex="2" />
+              <JFXRadioButton fx:id="radioButtonSeriesNumberName4" onAction="#saveSettingsSeries" styleClass="custom-jfx-radio-button" text="S00-E00" toggleGroup="$groupSeasonEpisodeName" userData="4" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+              <JFXRadioButton fx:id="radioButtonSeriesNumberName3" onAction="#saveSettingsSeries" styleClass="custom-jfx-radio-button" text="s00_e00" toggleGroup="$groupSeasonEpisodeName" userData="3" GridPane.rowIndex="1" />
+              <JFXRadioButton fx:id="radioButtonSeriesNumberName2" onAction="#saveSettingsSeries" styleClass="custom-jfx-radio-button" text="S00 E00" toggleGroup="$groupSeasonEpisodeName" userData="2" GridPane.columnIndex="1" />
+              <JFXRadioButton fx:id="radioButtonSeriesNumberName1" onAction="#saveSettingsSeries" styleClass="custom-jfx-radio-button" text="s00 e00" toggleGroup="$groupSeasonEpisodeName" userData="1" />
             </children>
             <GridPane.margin>
               <Insets left="91.0" />
